# mcp-personal-onedrive

./: .env.sample  .fleet.toml  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_http.bat  run_self_test.bat  run_stdio.bat
src/onedrive_mcp/: __init__.py  __main__.py  auth_graph.py  auth_oauth.py  config.py  graph_client.py  server.py
tests/: test_graph_client_download.py
