[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onedrive-mcp"
version = "0.1.0"
description = "Read-only MCP server for personal OneDrive (Microsoft consumer accounts)"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Roberto Ferraro" }]
readme = "README.md"
dependencies = [
    "mcp>=1.2.0",
    "msal>=1.28.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "PyJWT>=2.8.0",
    "starlette>=0.36.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
onedrive-mcp = "onedrive_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
onedrive_mcp = ["*.html"]
